--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,12 @@
 Source: dvcs-autosync
 Section: utils
 Priority: optional
-Maintainer: Rene Mayrhofer <rmayr@debian.org>
+Maintainer: Harshad Joshi <firewalrus@gmail.com>
 Build-Depends: cdbs (>= 0.4.49), debhelper (>= 7.0.50~), python-support, git
 Standards-Version: 3.9.2
-Homepage: http://www.mayrhofer.eu.org/dvcs-autosync
+Homepage: https://github.com/hj91/dvcs-autosync
 Vcs-Git: git://gitorious.org/dvcs-autosync/dvcs-autosync.git
-Vcs-Browser: http://gitorious.org/dvcs-autosync
+Vcs-Browser: https://github.com/hj91/dvcs-autosync
 
 Package: dvcs-autosync
 Architecture: all
